--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "cat-energy-18",
+  "name": "mycsssendbox",
   "version": "17.0.0",
   "private": true,
-  "description": "Личный проект «Кэт энерджи» от HTML Academy",
+  "description": "Личный проект «My-css-sendbox»",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
-    "autoprefixer": "^9.7.1",
+    "autoprefixer": "^9.7.4",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-plumber": "1.2.x",
